--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    border-right: 3px solid rgb(165, 45, 45);
   }
   
   li a:hover:not(.active) {
