--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 
-
- ul {
+ #navigationBar
+ {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -8,11 +8,11 @@
     background-color: #333;
   }
   
-  li {
+  #navigationBar li {
     float: left;
   }
   
-  li a {
+  #navigationBar li a {
     display: block;
     color: white;
     text-align: center;
@@ -21,16 +21,16 @@
     border-right: 3px solid rgb(165, 45, 45);
   }
   
-  li a:hover:not(.active) {
+  #navigationBar a:hover:not(.active) {
     background-color: #111;
   }
   
-  .active {
+  #navigationBar .active {
     background-color: #4CAF50;
   }
 
 
-*{
+#navigationBar *{
     box-sizing:border-box;
     padding:10;
     
@@ -64,22 +64,55 @@ div {
     z-index: -1;   
   }  
 
-  #image img {
-    height: auto; 
-    width: 20%; 
-
-}
- 
   
 
-
-
-img{width:20%}
+  
 h1{
-    color:red;
+    color:rgb(23, 21, 100);
+    word-spacing: 10px;
+    text-align: center;
+    font-family: Neverwinter;
+    text-shadow: 4px 3px rgba(71, 176, 218, 0.555);
+    font-size: 60px;
+}
+h2{
+  color:rgb(124, 32, 10);
+  word-spacing: 5px;
+  text-align: left;
+  font-family: Neverwinter;
+  text-shadow: 2px 2px rgba(180, 94, 23, 0.555);
+  font-size: 30px;
+}
+h3{
+  color:rgb(18, 78, 68);
+  word-spacing: 5px;
+  text-align: left;
+  font-family: Neverwinter;
+  text-shadow: 2px 2px rgba(7, 43, 18, 0.555);
+  font-size: 30px;
+}
+h4{
+  color:rgb(118, 9, 133);
+  word-spacing: 5px;
+  text-align: left;
+  font-family: Neverwinter;
+  text-shadow: 2px 2px rgba(40, 8, 54, 0.555);
+  font-size: 30px;
+}
+
+p{
+  font-family: Dungeon;
+  font-size: 25px;
+  background-color: rgba(55, 113, 201, 0.2);
+}
+li{
+  font-family: Dungeon;
+  font-size: 25px;
 }
 .lists{background-color: rgba(55, 113, 201, 0.2);
+      list-style-image: url("d20.png");
 }
+
 #bigTitle{
     font-size: 42px;
     opacity: 10;
